# compress-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  benchmarks.sh  compressed.rl
.github/workflows/: docker-js.yml  docker.yml
js-compressor/: .gitignore  Dockerfile  README.md  index.js  lz.js  package-lock.json  package.json  rle.js
rust-compressor/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  package-lock.json
rust-compressor/src/: lz.rs  main.rs  rle.rs
src/: lz.rs  main.rs  rle.rs
